hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    #    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"             
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"      
spec:
  rules:
    - http:
        paths:
          - path: /hello-world  
            pathType: Prefix
            backend:
              service:
                name: hello-world  
                port:
                  number: 5678
